<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>spending</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>modelmapper</artifactId>
      <groupId>org.modelmapper</groupId>
      <version>3.0.0</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>jjwt-api</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>0.12.5</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-gson</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <version>0.12.5</version>
    </dependency>
    <dependency>
      <artifactId>jjwt-impl</artifactId>
      <groupId>io.jsonwebtoken</groupId>
      <scope>runtime</scope>
      <version>0.12.5</version>
    </dependency>
  </dependencies>
  <description>API to manage personal expenses</description>
  <developers>
    <developer/>
  </developers>
  <groupId>com.example</groupId>
  <licenses>
    <license/>
  </licenses>
  <modelVersion>4.0.0</modelVersion>
  <name>spending</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.3.0</version> <!-- lookup parent from repository -->
  </parent>
  <properties>
    <java.version>22</java.version>
  </properties>
  <scm>
    <connection/>
    <developerConnection/>
    <tag/>
    <url/>
  </scm>
  <url/>

  <version>0.0.1-SNAPSHOT</version>

</project>
